# bible_text_generation_web_app

./: Dockerfile  README.md  configuration.yaml  main.py  pyproject.toml  requirements.txt  temp.py
.github/workflows/: bible_app_ci.yml
bible_app/: __init__.py  main.py
bible_app/src/: generate.py
bible_app/src/GPT_ver_0/: constant.py  generate.py  model.py  process_data.py
bible_app/src/GPT_ver_1/: constant.py  generate.py  model.py  process_data.py
src/: constant.py  generate.py  model.py  process_data.py
src/GPT_ver_0/: generate.py  model.py  process_data.py
src/GPT_ver_1/: generate.py  process_data.py
templates/: home.html
tests/: test_example.py
